src/objects/Training_Track_Level__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Track__c</fullName>
        <label>Training Track</label>
        <referenceTo>Training_Track__c</referenceTo>
        <relationshipLabel>Training Track Levels</relationshipLabel>
        <relationshipName>Training_Track_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Training Track Level</label>
    <nameField>
        <label>Training Track Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Track Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>